--- a/about.html
+++ b/about.html
@@ -330,8 +330,8 @@
                                     <i class="fa fa-briefcase"></i>
                                 </div>
                                 <span class="time open-sans-font text-uppercase">2018 - 2019</span>
-                                <h5 class="poppins-font text-uppercase">Full Stack Developer<span class="place open-sans-font">Videohive</span></h5>
-                                <p class="open-sans-font">Lorem ipsum dolor sit amet, tempor incididunt ut laboreconsectetur elit, sed do eiusmod tempor duntt</p>
+                                <h5 class="poppins-font text-uppercase">Full Stack Developer<span class="place open-sans-font">Freelancer</span></h5>
+                                <p class="open-sans-font"></p>
                             </li>
                         </ul>
                     </div>
