--- a/about.html
+++ b/about.html
@@ -314,16 +314,16 @@
                                     <i class="fa fa-briefcase"></i>
                                 </div>
                                 <span class="time open-sans-font text-uppercase">2021 - Present</span>
-                                <h5 class="poppins-font text-uppercase">Full Stack Developer <span class="place open-sans-font">Envato</span></h5>
-                                <p class="open-sans-font">Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore adipisicing elit, </p>
+                                <h5 class="poppins-font text-uppercase">Full Stack Developer <span class="place open-sans-font">Pune</span></h5>
+                                <p class="open-sans-font"></p>
                             </li>
                             <li>
                                 <div class="icon">
                                     <i class="fa fa-briefcase"></i>
                                 </div>
                                 <span class="time open-sans-font text-uppercase">2019 - 2020</span>
-                                <h5 class="poppins-font text-uppercase">Full Stack Developer <span class="place open-sans-font">Themeforest</span></h5>
-                                <p class="open-sans-font">Lorem incididunt dolor sit amet, consectetur eiusmod dunt doldunt dol elit, tempor incididunt</p>
+                                <h5 class="poppins-font text-uppercase">Full Stack Developer <span class="place open-sans-font">Pune</span></h5>
+                                <p class="open-sans-font"></p>
                             </li>
                             <li>
                                 <div class="icon">
@@ -343,25 +343,17 @@
                                 <div class="icon">
                                     <i class="fa fa-graduation-cap"></i>
                                 </div>
-                                <span class="time open-sans-font text-uppercase">2015</span>
-                                <h5 class="poppins-font text-uppercase">Engineering Degree <span class="place open-sans-font">Oxford University</span></h5>
-                                <p class="open-sans-font">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore</p>
+                                <span class="time open-sans-font text-uppercase">2022</span>
+                                <h5 class="poppins-font text-uppercase">B.E.(Computer Engi.) pursing<span class="place open-sans-font">Pune University</span></h5>
+                                <p class="open-sans-font">Sinhgad College of Engineering,Vadgaon Bk.</p>
                             </li>
                             <li>
                                 <div class="icon">
                                     <i class="fa fa-graduation-cap"></i>
                                 </div>
-                                <span class="time open-sans-font text-uppercase">2012</span>
-                                <h5 class="poppins-font text-uppercase">Master Degree <span class="place open-sans-font">Kiev University</span></h5>
-                                <p class="open-sans-font">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut adipisicing</p>
-                            </li>
-                            <li>
-                                <div class="icon">
-                                    <i class="fa fa-graduation-cap"></i>
-                                </div>
-                                <span class="time open-sans-font text-uppercase">2009</span>
-                                <h5 class="poppins-font text-uppercase">Bachelor Degree <span class="place open-sans-font">Tunis High School</span></h5>
-                                <p class="open-sans-font">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ut labore</p>
+                                <span class="time open-sans-font text-uppercase">2019</span>
+                                <h5 class="poppins-font text-uppercase">Diploma in Computer Engi.<span class="place open-sans-font">MSBTE</span></h5>
+                                <p class="open-sans-font">Vidya Pratishthan Polytechnic college,indapur</p>
                             </li>
                         </ul>
                     </div>
