--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
                     <li>
                         <figure>
                             <img src="img/projects/project-1.jpg" alt="Portolio Image" />
-                            <div><span>Image Project</span></div>
+                            <div><span>Digital Agency</span></div>
                         </figure>
                     </li>
                     <!-- Portfolio Item Ends -->
@@ -155,7 +155,7 @@
                     <li>
                         <figure>
                             <img src="img/projects/project-2.jpg" alt="Portolio Image" />
-                            <div><span>Youtube Project</span></div>
+                            <div><span>global prowess</span></div>
                         </figure>
                     </li>
                     <!-- Portfolio Item Ends -->
@@ -163,7 +163,7 @@
                     <li>
                         <figure>
                             <img src="img/projects/project-3.jpg" alt="Portolio Image" />
-                            <div><span>Slider Project</span></div>
+                            <div><span>Rangsamarth Studio LLP.</span></div>
                         </figure>
                     </li>
                     <!-- Portfolio Item Ends -->
@@ -171,7 +171,7 @@
                     <li>
                         <figure>
                             <img src="img/projects/project-4.jpg" alt="Portolio Image" />
-                            <div><span>Local Video Project</span></div>
+                            <div><span>Inventry Management System</span></div>
                         </figure>
                     </li>
                     <!-- Portfolio Item Ends -->
@@ -179,7 +179,7 @@
                     <li>
                         <figure>
                             <img src="img/projects/project-5.jpg" alt="Portolio Image" />
-                            <div><span>Image Project</span></div>
+                            <div><span>Vedika Book Store</span></div>
                         </figure>
                     </li>
                     <!-- Portfolio Item Ends -->
@@ -187,7 +187,7 @@
                     <li>
                         <figure>
                             <img src="img/projects/project-6.jpg" alt="Portolio Image" />
-                            <div><span>Image Project</span></div>
+                            <div><span>More Fruits</span></div>
                         </figure>
                     </li>
                 </ul>
