--- a/portfolio.html
+++ b/portfolio.html
@@ -323,9 +323,6 @@
                             </figcaption>
                             <!-- Project Details Ends -->
                             <!-- Main Project Content Starts -->
-                            <video id="video" class="responsive-video" controls poster="img/projects/project-1.jpg">
-                            <source src="img/projects/video.mp4" type="video/mp4">
-                        </video>
                             <!-- Main Project Content Ends -->
                         </figure>
                     </li>
@@ -335,16 +332,13 @@
                         <figure>
                             <!-- Project Details Starts -->
                             <figcaption>
-                                <h3>Image Project</h3>
+                                <h3>Kdtech Software Solution</h3>
                                 <div class="row open-sans-font">
                                     <div class="col-6 mb-2">
                                         <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
                                     </div>
                                     <div class="col-6 mb-2">
                                         <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Envato</span>
-                                    </div>
-                                    <div class="col-6 mb-2">
-                                        <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Javascript</span>
                                     </div>
                                     <div class="col-6 mb-2">
                                         <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">www.envato.com</a></span>
