--- a/portfolio.html
+++ b/portfolio.html
@@ -301,31 +301,6 @@
                     </li>
                     <!-- Portfolio Item Detail Ends -->
                     <!-- Portfolio Item Detail Starts -->
-                    <li>
-                        <figure>
-                            <!-- Project Details Starts -->
-                            <figcaption>
-                                <h3>Local Video Project</h3>
-                                <div class="row open-sans-font">
-                                    <div class="col-6 mb-2">
-                                        <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Video</span>
-                                    </div>
-                                    <div class="col-6 mb-2">
-                                        <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Videohive</span>
-                                    </div>
-                                    <div class="col-6 mb-2">
-                                        <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">Adobe Premium</span>
-                                    </div>
-                                    <div class="col-6 mb-2">
-                                        <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">www.envato.com</a></span>
-                                    </div>
-                                </div>
-                            </figcaption>
-                            <!-- Project Details Ends -->
-                            <!-- Main Project Content Starts -->
-                            <!-- Main Project Content Ends -->
-                        </figure>
-                    </li>
                     <!-- Portfolio Item Detail Ends -->
                     <!-- Portfolio Item Detail Starts -->
                     <li>
@@ -357,17 +332,17 @@
                         <figure>
                             <!-- Project Details Starts -->
                             <figcaption>
-                                <h3>KDTECH SOFTWARE SOLUTION</h3>
+                                <h3>More Fruits</h3>
                                 <div class="row open-sans-font">
                                     <div class="col-6 mb-2">
                                         <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
                                     </div>
                                     <div class="col-6 mb-2">
-                                        <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Kandar(Solapur)</span>
+                                        <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Kandar</span>
                                     </div>
 
                                     <div class="col-6 mb-2">
-                                        <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">www.kdtechsoftwaresolution.com</a></span>
+                                        <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">www.morefruits.in</a></span>
                                     </div>
                                 </div>
                             </figcaption>
