--- a/portfolio.html
+++ b/portfolio.html
@@ -190,6 +190,13 @@
                             <div><span>More Fruits</span></div>
                         </figure>
                     </li>
+
+                    <li>
+                        <figure>
+                            <img src="img/projects/project-7.jpg" alt="Portolio Image" />
+                            <div><span>Well Credit Union</span></div>
+                        </figure>
+                    </li>
                 </ul>
             </section>
             <!-- Portfolio Grid Ends -->
@@ -321,6 +328,51 @@
                             <!-- Main Project Content Ends -->
                         </figure>
                     </li>
+
+
+
+
+
+
+
+
+
+
+
+                    <li>
+                        <figure>
+                            <!-- Project Details Starts -->
+                            <figcaption>
+                                <h3>Well Credit Union</h3>
+                                <div class="row open-sans-font">
+                                    <div class="col-6 mb-2">
+                                        <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
+                                    </div>
+                                    <div class="col-6 mb-2">
+                                        <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Nigeria</span>
+                                    </div>
+
+                                    <div class="col-6 mb-2">
+                                        <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">www.wellsunitedbank.com</a></span>
+                                    </div>
+                                </div>
+                            </figcaption>
+                            <!-- Project Details Ends -->
+                            <!-- Main Project Content Starts -->
+                            <img src="img/projects/project-7.jpg" alt="Portolio Image" />
+                            <!-- Main Project Content Ends -->
+                        </figure>
+                    </li>
+
+
+
+
+
+
+
+
+
+
                 </ul>
                 <!-- Portfolio Navigation Starts -->
                 <nav>
