--- a/portfolio.html
+++ b/portfolio.html
@@ -262,6 +262,18 @@
                                 <!-- The slideshow -->
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
+                                        <img src="img/projects/project-7.jpg" alt="slide 1">
+                                    </div>
+                                    <div class="carousel-item active">
+                                        <img src="img/projects/project-6.jpg" alt="slide 1">
+                                    </div>
+                                    <div class="carousel-item active">
+                                        <img src="img/projects/project-5.jpg" alt="slide 1">
+                                    </div>
+                                    <div class="carousel-item active">
+                                        <img src="img/projects/project-4.jpg" alt="slide 1">
+                                    </div>
+                                    <div class="carousel-item active">
                                         <img src="img/projects/project-3.jpg" alt="slide 1">
                                     </div>
                                     <div class="carousel-item">
