--- a/portfolio.html
+++ b/portfolio.html
@@ -369,6 +369,37 @@
                                     </div>
                                 </div>
                             </figcaption>
+                            <div id="slider" class="carousel slide portfolio-slider" data-ride="carousel" data-interval="false">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#slider" data-slide-to="0" class="active"></li>
+                                    <li data-target="#slider" data-slide-to="1"></li>
+                                    <li data-target="#slider" data-slide-to="2"></li>
+                                </ol>
+                                <!-- The slideshow -->
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="img/projects/project-7.jpg" alt="slide 1">
+                                    </div>
+                                    <div class="carousel-item active">
+                                        <img src="img/projects/project-6.jpg" alt="slide 1">
+                                    </div>
+                                    <div class="carousel-item active">
+                                        <img src="img/projects/project-5.jpg" alt="slide 1">
+                                    </div>
+                                    <div class="carousel-item active">
+                                        <img src="img/projects/project-4.jpg" alt="slide 1">
+                                    </div>
+                                    <div class="carousel-item active">
+                                        <img src="img/projects/project-3.jpg" alt="slide 1">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/projects/project-2.jpg" alt="slide 2">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/projects/project-1.jpg" alt="slide 3">
+                                    </div>
+                                </div>
+                            </div>
                             <!-- Project Details Ends -->
                             <!-- Main Project Content Starts -->
                             <img src="img/projects/project-7.jpg" alt="Portolio Image" />
