--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
                             <ul class="about-list list-unstyled open-sans-font">
                                 <li> <span class="title">Address :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Pune,India</span> </li>
                                 <li> <span class="title">phone :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">+919975067357</span> </li>
-                                <li> <span class="title">Email :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">kiran.scoe@mail.com</span> </li>
+                                <li> <span class="title">Email :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">kiran.scoe@gmail.com</span> </li>
                                 <li> <span class="title">Skype :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Kiran Devkar</span> </li>
                                 <li> <span class="title">langages :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">English,Hindi,Marathi</span> </li>
                             </ul>
