--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,13 @@
     <meta charset="utf-8">
     <title>Portfolio - Personal Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="title" content="I am kiran devkar. i am full Stack web developer,Blogger & Youtuber">
+    <meta name="description" content="my name is Kiran  Balasaheb Devkar.i am currently working as Full Stack Web Developer(Laravel Developer) also as Freelancer.hungry to learn">
+    <meta name="keywords" content="Kiran Ba;sa Devkar, kiran_devkar9696,TechnicalKd,Laravel Developer,">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="author" content="Kiran Devkar">
     <!-- Template Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,600i,700" rel="stylesheet">
